# CMakeList.txt : CMake project for Army, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

set (SOURCES 
	"Army.cpp"
	"Point.cpp"
	"Mount.cpp"
	"Location.cpp"
	"Weapon.cpp"
	"State.cpp"
	"Unit.cpp"
	"Axe.cpp"
	"Bow.cpp"
	"Claws.cpp"
	"Dagger.cpp"
	"Fangs.cpp"
	"Staff.cpp"
	"Sword.cpp"
	"Soldier.cpp"
	"Rogue.cpp"
	"Berserker.cpp"
	"Vampire.cpp"
	"Werewolf.cpp"
	"Spell.cpp"
	"MagicState.cpp"
	"Spellcaster.cpp"
	"FireBall.cpp"
	"Heal.cpp"
	"Healer.cpp"
	"Demon.cpp"
	"Necromancer.cpp"
	"Warlock.cpp"
	"Wizard.cpp"
 "Battlefield.cpp")

set (HEADERS
	"Point.h"
	"Mount.h"
	"Location.h"
	"Weapon.h"
	"Exceptions.h"
	"State.h"
	"Unit.h"
	"Axe.h"
	"Bow.h"
	"Claws.h"
	"Dagger.h"
	"Fangs.h"
	"Staff.h"
	"Sword.h"
	"Soldier.h"
	"Rogue.h"
	"Berserker.h"
	"Vampire.h"
	"Werewolf.h"
	"Spell.h"
	"MagicState.h"
	"Spellcaster.h"
	"FireBall.h"
	"Heal.h"
	"Healer.h"
	"Demon.h"
	"Necromancer.h"
	"Warlock.h"
	"Wizard.h"
	"Battlefield.h"
)
# Add source to this project's executable.
add_executable (Army ${SOURCES} ${HEADERS})
